# robotmaster-drone

./: README.md  sync_imu_lidar.py
15pass/: .run_posctrl.sh.swp  .setup.bash.swp
15pass/data/: front_view.txt
15pass/devel/: .catkin  .rosinstall  setup.sh
catkin_base/devel/: .catkin
catkin_base/src/basic_dev/: CMakeLists.txt
keyboard_ctrl_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
make_data/: Untitled.ipynb  data2.py  data_translate.py  datamaker.py  datamaker_with_hough_circle.py  datascript.py  yolo_test.py  筛选.py
make_data/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  data2-checkpoint.py
mytestbase/devel/: .catkin
mytestbase/src/pid_controller/: CMakeLists.txt  package.xml
mytestbase/src/pid_controller/include/pid_controller/: PIDController.hpp
mytestbase/src/pid_controller/launch/: pid_controller.launch
mytestbase/src/pid_controller/scripts/: targertest.py
mytestbase/src/pid_controller/src/: PIDController.cpp  pid_node.cpp
robo_commit/devel/: .catkin  .rosinstall
train_net_work/: network.py  随机化数据集.py
train_net_work/data/: front_view.txt
yy_useable/: Dockerfile  cnn.pt  kill2_make.sh  kill_make.sh  run_robo.sh  setup.bash
yy_useable/3rd/glog/: demangle_unittest  logging_striptest0  logging_striptest10  logging_striptest2  logging_unittest  signalhandler_unittest  stacktrace_unittest  stl_logging_unittest  symbolize_pie_unittest  (+2 more)
yy_useable/devel/: .catkin  _setup_util.py  local_setup.sh
yy_useable/path_test/: CNN.py  circle_fit.py  circle_test2.ipynb  draw.py  path.py  reproj.py  run.py  run1.py  run_xu.py
yy_useable/script/: CNN.py  path.py  reproj.py  run.py  run1.py
(+365 files in other folders)
