<?xml version="1.0"?>
<package format="2">
  <name>pid_controller</name>
  <version>1.0.0</version>
  <description>Independent PID controller package for UAV control</description>

  <maintainer email="1364228786@qq.com">kirk</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>airsim_ros</depend>
  <depend>eigen</depend>
</package>